[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "zampie_utils"
version = "0.6.0"
description = "A collection of utility functions"
readme = "README.md"
license = "MIT"
authors = [
    {name = "zampie", email = "zampielzp@gmail.com"}
]
keywords = ["utils", "tools", "utilities"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
requires-python = ">=3.6"
dependencies = [
    "pandas",
    "chardet",
    "rich",
    "natsort",
    "json5"
]

[project.urls]
"Homepage" = "https://github.com/zampie/zampie_utils"
"Bug Reports" = "https://github.com/zampie/zampie_utils/issues"
"Source" = "https://github.com/zampie/zampie_utils"

[tool.setuptools.packages.find]
where = ["."]
include = ["zampie_utils*"] 